--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,3 @@
-.div1{
-    height: 800px;
-    width: 100%;
-    background-color: red;
-}
-
-.div2{
-    height: 100vh;
-    width: 100vw;
-    background-color: rgb(0, 255, 81);
+html{
+    scroll-behavior: smooth;
 }
