--- a/src/stylesheets/contact.css
+++ b/src/stylesheets/contact.css
@@ -1,5 +1,6 @@
 .containerContact{
     width: 100vw;
+    min-width: 360px;
     min-height: 720px;
     height: 100vh;
     background-color: #fffffa;
@@ -7,7 +8,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    position: relative;
+
 }
 /*Night mode for background*/
 .containerNight{
@@ -22,9 +23,26 @@
     justify-content: left;
 }
 
+.middleContactBox{
+    height: 80%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content:center;
+}
+
+.middleContact{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 25%;
+    align-items:start;
+    justify-content:center;
+    margin-bottom: 10px;
+}
 .titleContact{
     font-family: 'Source Code Pro', monospace;
-    margin-left: 30px;
     height: 30px;
     width: 180px;
     display: flex;
@@ -32,36 +50,23 @@
     align-items: center;
     background-color: #F5C828;
     border-radius: 50px;
-}
-.middleContactBox{
-    height: 80%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    justify-content: space-between;
-    
-}
-.middleContact{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 25%;
-    align-items:start;
-    justify-content: space-between;
-    margin-bottom: 10px;
+    margin-left: 30px;
 }
 
 .social{
-    margin:10px 0px 0px 0px;
     width: 100%;
     height: 100%;
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
+}
+.social a:first-child{
+    margin-left: 30px;
+}
+.social a:last-child{
+    margin-right: 30px;
 }
 .containerLinkContact{
-    margin: 0px 30px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -207,29 +212,30 @@
 }
 
 .barContent{
-    width: 360px;
+    min-width: 360px;
+    width: 20%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .barCopy{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     color: #fffffa;
     font-size: 20px;
     font-weight: 300;
-    width: 230px;
-    height: 100%;
-    text-align: left;
+}
+.barCopy p{
+    margin: 0px;
 }
 
 .optionsConfig{
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 5%;
     gap: 10px;
-    width: 60px;
-    height: 100%;
 }
 
 @media(768px< width <1080px){
@@ -241,7 +247,7 @@
         display: flex;
         flex-direction: column;
         width:30%;
-        height: 50%;
+        height: 70%;
         align-items:start;
         justify-content: space-between;
         margin-bottom: 10px;
@@ -250,13 +256,12 @@
         width: 75%;
     }
     .social{
-        width: 180px;
+        width: 100%;
         height: 100%;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
         gap: 20px;
-        margin-left: 30px;
     }
     .containerLinkContact{
         display: flex;
@@ -265,7 +270,14 @@
         width: 90px;
         height: 90px;
         background-color: #F5C828;
-        border-radius: 50px;
+        border-radius: 100px;
+    }
+    .social a:first-child{
+        margin:20px 0px 0px 0px;
+
+    }
+    .social a:last-child{
+        margin-right: 0px;
     }
     .key5 img{
         height: 120%;
@@ -301,12 +313,12 @@
         flex-direction: row;
     }
     .social{
-        width: 380px;
-        margin-left: 50px;
+        width: 100%;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
         gap: 20px;
+        margin-left: 30px;
     }
     .containerLinkContact{
         display: flex;
@@ -316,6 +328,13 @@
         height: 90px;
         background-color: #F5C828;
         border-radius: 50px;
+    }
+    .social a:first-child{
+        margin-left: 0px;
+        margin-top: 30px;
+    }
+    .social a:last-child{
+        margin-right: 0px;
     }
     .middleBottom{
         align-items: start;
@@ -369,13 +388,12 @@
         flex-direction: row;
     }
     .social{
-        width: 450px;
-        margin-left: 50px;
-
+        width: 100%;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
         gap: 20px;
+        margin-left: 30px;
     }
     .containerLinkContact{
         display: flex;
@@ -385,6 +403,13 @@
         height: 90px;
         background-color: #F5C828;
         border-radius: 50px;
+    }
+    .social a:first-child{
+        margin-left: 0px;
+        margin-top: 35px;
+    }
+    .social a:last-child{
+        margin-right: 0px;
     }
     .middleBottom{
         align-items: start;
